--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "license": "GPL-2.0-or-later",
     "require": {
         "php": "^8.1 || ^8.2 || ^8.3 || ^8.4",
-        "typo3/cms-core": "^13.4.21 || ^14.0",
+        "typo3/cms-core": "^14.0",
         "typo3/cms-dashboard": "^13.4.21 || ^14.0",
         "typo3/cms-install": "^13.4.21 || ^14.0",
         "ext-xml": "*",
@@ -46,7 +46,7 @@
         "codeception/module-filesystem": "^3.0.0",
         "codeception/module-webdriver": "^4.0.0",
         "phpstan/phpstan": "^2.1",
-        "saschaegerer/phpstan-typo3": "^2.1 || dev-main@dev"
+        "saschaegerer/phpstan-typo3": "^2.1 || ^3.0.1"
     },
     "autoload": {
         "psr-4": {
