--- a/.github/workflows/core14.yml
+++ b/.github/workflows/core14.yml
@@ -22,7 +22,8 @@ jobs:
       - name: Install TYPO3 14 dependencies
         run: |
           Build/Scripts/runTests.sh -p ${{ matrix.php }} -s composer -e "require typo3/cms-core:^14.0 --no-progress --no-interaction"
-          sudo mkdir -p .Build/.cache
+          mkdir -p .Build/.cache
+          mkdir -p ..Build/public/typo3temp/var/transien
           sudo chmod -R 777 .
           Build/Scripts/runTests.sh -s acceptance -p ${{ matrix.php }} -t 14
 
